--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Cleaning Services Hampshire | House & Commercial Cleaners | Bantha Cleaning</title>
-    <meta name="description" content="Professional cleaning services in Hampshire & Surrey. Trusted house cleaners, deep cleaning & commercial cleaning across Winchester, Basingstoke, Aldershot & more. 100% satisfaction guaranteed! ☎️ 07825183734">
-    <meta name="keywords" content="cleaning services Hampshire, house cleaners Aldershot, commercial cleaning Surrey, deep cleaning Winchester, domestic cleaners Basingstoke, professional cleaners Hampshire">
+    <title>Hampshire & Surrey Professional Cleaning Services – House, Deep, & Commercial Cleaners</title>
+    <meta name="description" content="Professional cleaning services in Hampshire & Surrey. Trusted domestic, deep cleaning, & commercial cleaners across Winchester, Basingdstoke, Aldershot & more. Get your **Free Quote** today! 100% satisfaction guaranteed.">
+    <!-- <meta name="keywords" content="cleaning services Hampshire, house cleaners Aldershot, commercial cleaning Surrey, deep cleaning Winchester, domestic cleaners Basingstoke, professional cleaners Hampshire"> -->
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Professional Cleaning Services Hampshire | Bantha Cleaning">
