--- a/deepcleaning/index.html
+++ b/deepcleaning/index.html
@@ -630,7 +630,7 @@
             
             // --- 1. Opening Hours Logic ---
             const hoursSchedule = {
-                0: { day: 'Sunday', hours: 'Closed' },
+                0: { day: 'Sunday', hours: '9:00am - 4:00pm', open: 9, close: 16 },
                 1: { day: 'Monday', hours: '8:00am - 6:00pm', open: 8, close: 18 },
                 2: { day: 'Tuesday', hours: '8:00am - 6:00pm', open: 8, close: 18 },
                 3: { day: 'Wednesday', hours: '8:00am - 6:00pm', open: 8, close: 18 },
