--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -371,10 +371,7 @@
 
             // --- 1. Opening Hours Logic ---
             const hoursSchedule = {
-                0: {
-                    day: 'Sunday',
-                    hours: 'Closed'
-                },
+                0: { day: 'Sunday', hours: '9:00am - 4:00pm', open: 9, close: 16 },
                 1: {
                     day: 'Monday',
                     hours: '8:00am - 6:00pm',
