--- a/contact/index.html
+++ b/contact/index.html
@@ -672,7 +672,7 @@
     <section class="premium-contact-section">
         <div class="premium-form-wrapper">
             <h1 class="premium-section-title">Contact Bantha Cleaning</h1>
-            <p class="premium-section-subtitle">Transform your space today! Get a free quote for home, office, or deep cleaning in Aldershot, Basingstoke & nearby areas. Fast, friendly service!</p>
+            <p class="premium-section-subtitle">Get a free quote today!</p>
             <form class="premium-contact-form" aria-label="Contact form">
                 <div class="premium-form-row">
                     <div class="premium-input-group">
