--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ body.notification-active header {
                     <h1 class="company-name">Professional Home and Commercial Cleaners</h1>
                     <h2 class="company-subtitle">Reliable Domestic & Commercial Cleaning Across the South East</h2>
                     <div class="company-description">
-                        <p>Bantha Cleaning is a professional and reliable cleaning company that serves homes and businesses across the region. We proudly cover a wide range of local areas, including Winchester.</p>
+                        <p>Bantha Cleaning is a professional and reliable cleaning company that serves homes and businesses within a 60-mile radius of Aldershot. We proudly cover a wide range of locations, including Winchester, Andover, Basingstoke, Fleet, Farnborough, Farnham, Hook, Woking, and Ash Vale.</p>
                         <p>Established as a trusted name in the region, we deliver superior home and commercial cleaning services to our growing number of clients every single day. Allow Bantha Cleaning to meticulously clean your property, ensuring that nothing is overlooked. Our domestic and commercial cleaning is carried out by our professionally trained cleaners who are background checked, employed, and fully insured.</p>
                         <p>And with our <strong>100% Satisfaction Guarantee</strong> for every service, we assure you of a great experience every time we clean your home or business. If you are looking for a reliable local partner that will meet your exact needs, contact our office today to arrange a free, no-obligation estimate.</p>
                     </div>
