--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ body.notification-active header {
                 </div>
             </article>
             <aside class="contact-form-container">
-                <h2 class="form-title">Winchester Introductory Cleaning Offer: 1 Hour General Clean for Just £19!</h2>
+                <h2 class="form-title">Request Your Free Quote: Professional Home & Commercial Cleaners</h2>
                 <form class="contact-form" id="contactForm" aria-label="Contact form">
                     <div class="form-row">
                         <div class="form-group">
@@ -551,7 +551,7 @@ body.notification-active header {
                         <label for="message">Message *</label>
                         <textarea id="message" name="message" rows="3" placeholder="Tell us about your cleaning requirements..." required aria-required="true"></textarea>
                     </div> -->
-                    <button type="submit" class="submit-btn">Claim Your Fixed Rate Clean</button>
+                    <button type="submit" class="submit-btn">Request Your Quote</button>
                 </form>
             </aside>
         </div>
