--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ body.notification-active header {
     </section>
 
     <!-- Google Reviews Section -->
-<section class="py-16 lg:py-24 bg-white" aria-label="Customer reviews">
+<!-- <section class="py-16 lg:py-24 bg-white" aria-label="Customer reviews">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
         <h2 class="text-3xl sm:text-4xl font-bold text-bantha-dark mb-8">Our Google Reviews</h2>
         
@@ -664,7 +664,7 @@ body.notification-active header {
             </a>
         </div>
     </div>
-</section>
+</section> -->
 
     <!-- Modern Footer -->
     <footer class="bg-bantha-dark text-white py-12">
